# interview-assistant

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.json
interview_assistant/: README.md  __init__.py
interview_assistant/api/: routes.py
interview_assistant/core/: schemas.py  services.py
interview_assistant/core/ai/: __init__.py  embeddings.py
interview_assistant/core/ai/content_generation/: question_content_generation.py  tip_content_generation.py
interview_assistant/core/utils/: retry.py
interview_assistant/storage/: __init__.py  storage.py  test.ipynb
notebooks/: demo.ipynb
tests/: test_embedding.py  test_service.py  test_storage.py
tests/content_generation/: test_question_content_generation.py  test_tip_content_generation.py
