[tool.poetry]
name = "intervew-assistant"
version = "0.1.0"
description = "AI-powered Interview Assistant API"
authors = ["Gabriel-melki <gabriel.melki@hotmail.fr>"]
readme = "README.md"
packages = [{include = "interview_assistant"}]

[tool.poetry.dependencies]
python = "^3.12.0"
numpy = "^2.2.2"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
openai = "^1.3.6"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
fakeredis = "^2.26.2"
coverage = "^7.6.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
include = ["interview_assistant/*.py"]
show_missing = true


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
pylint = "3.2.7"
line_profiler = "^4.1.1"
pytest = "^8.3.4"
coverage = "^7.6.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100                 
target-version = ['py37']         
skip-string-normalization = false 
include = '\.pyi?$'

[tool.line_profiler]
enabled = true
